app_controllers/infrastructure/kubernetes-deployments/services/suricata/service.yml
apiVersion: v1
kind: Service
metadata:
  name: suricata-charles
spec:
  selector:
    app: suricata-charles
  ports:
  - name: http
    targetPort: 5300
    port: 80
