app_controllers/infrastructure/kubernetes-deployments/services/suricata/ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: suricata-charles
  annotations:
    kubernetes.io/ingress.class: traefik
    kubernetes.io/preserve-host: "true"
    traefik.frontend.passHostHeader: "false"
    traefik.frontend.priority: "1"
spec:
  rules:
  - host: suricata-charles.us-west1-a.securethebox.us
    http:
      paths:
      - path: /
        backend:
          serviceName: suricata-charles
          servicePort: http
